# packaging_tutorial

./: .gitignore  README.md  TODO.md  activate_env.bat  build_pip.bat  build_win.bat  creating_env_packaging_tutorial.sh  packaging_tutorial_main.py  packaging_tutorial_start.bat  packaging_tutorial_start.sh  requirements_windows.txt  setup.cfg
docs/: HEADER_CODE.txt
src/gui_ext/: gui_app_about_window.py  gui_app_help_window.py  gui_app_main_window.py  gui_frame_ext_config.py
src/helpers/: helper_filesystem.py
src/my_app_name/: __main__.py
win_exe_conf/: __main__.spec
