[metadata]
name = my-package-MY_APP_NAME_HERE
version = 0.0.1
author = Example Author
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/juancarlosmiranda/packaging_tutorial
project_urls =
    Bug Tracker = https://github.com/juancarlosmiranda/packaging_tutorial/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
# If any package or subpackage contains *.txt or *.rst files, include them:
* = *.txt, *.rst, *.md
# Include any *.dat files found in the "data" subdirectory of the "my_app_name"
# package:
my_app_name = conf/*.conf